[package]
name = "blinc_canvas_kit"
description = "Canvas authoring toolkit: interactive scene graphs (pan, zoom, selection, grid), 3D scene kit, and p5.js-style immediate-mode sketching over Blinc's DrawContext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/blinc_canvas_kit"
rust-version.workspace = true
keywords = ["ui", "gui", "canvas", "editor", "node-graph"]
categories = ["gui", "game-development"]

[lib]
crate-type = ["lib"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.1" }
blinc_layout = { path = "../blinc_layout", version = "0.5.1" }
blinc_gpu = { path = "../blinc_gpu", version = "0.5.1" }
# Downstream input polling layer. Used by `SceneKit3D::with_input` to
# automate the `capture_input` + per-frame `frame_end` wiring that
# every 3D demo reimplements. The Blinc workspace patches the git
# rev to `packages/blinc_input` via the root `[patch]` table, so
# iteration is free; standalone consumers resolve via git.
blinc_input = { git = "https://github.com/project-blinc/blinc_input.git", rev = "3e94941bd59bafcd23ad59e8db504a44fa85b4f5" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true, features = ["hdr"] }

# Cross-target monotonic clock. `std::time::Instant` panics on
# `wasm32-unknown-unknown`; `web_time::Instant` is a zero-cost re-export of
# `std::time::Instant` on native and wraps `performance.now()` on the web,
# so `sketch::Sketch` gets wall-clock `t`/`dt` on every target.
web-time = "1.1"
