[package]
name = "blinc_dsl_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blinc DSL core — Zyntax-embedded grammar, runtime engine, and codegen primitives shared by the Rust embed crate, the AOT codegen pipeline, and the standalone CLI"
publish = false

[dependencies]
# Zyntax SDK. See workspace dep notes in /Cargo.toml — this is path-pinned
# during prototyping because upstream is 0.1.0 with no semver guarantees.
zyntax_embed = { workspace = true }
# Direct dep on the typed-AST crate so we can inject extern function
# declarations into a parsed `TypedProgram` from Rust before passing
# it to `compile_typed_program`. The grammar-action interpreter
# doesn't expose `is_external` / `link_name` (see
# zyntax/crates/zyn_peg/src/runtime2/interpreter.rs:866-899), so any
# host that wants statically-registered builtins to round-trip
# through type inference has to add the extern decls programmatically.
# Pinned to the same upstream rev as `zyntax_embed` in the workspace
# Cargo.toml — bump both together when pulling in upstream changes.
zyntax_typed_ast = { git = "https://github.com/darmie/zyntax", rev = "5b0dfab7940dd01406f1982e02a2d2c7b5242604" }

# Runtime-agnostic FSM substrate. blinc_dsl_core publishes its
# parsed FSM defs into `blinc_runtime::fsm::FsmRegistry` and
# installs a JIT-flavoured `GuardDispatcher` so widget-side
# `Stateful<FsmStateId>` consumers can reach DSL-defined FSMs
# without depending on Zyntax themselves. The AOT path
# (Zyntax+LLVM, future) writes the same registry types from its
# own generated init function — so this dep stays runtime-only,
# not a path back into Zyntax.
blinc_runtime = { path = "../blinc_runtime", version = "0.5.1", default-features = false }

# `blinc_layout` is the widget primitives crate. `blinc_dsl_core`
# uses it directly in the value-returning view externs
# (`$Blinc$Text$view`, `$Blinc$Div$view`, …) to construct real
# widgets that flow back through the JIT as widget handles.
blinc_layout = { path = "../blinc_layout", version = "0.5.1" }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
