[package]
name = "blinc_dsl_macro"
description = "Proc-macros for the Blinc DSL — `#[extern_widget]` Rust→DSL widget exports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "dsl", "macros", "blinc"]
categories = ["gui", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
