[package]
name = "blinc_gpu"
description = "Blinc GPU renderer - SDF-based rendering via wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_gpu"
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
# No default backends - must be explicitly selected per platform
default = []
vulkan = ["wgpu/vulkan-portability"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
# Platform-specific presets
desktop = ["vulkan", "metal", "dx12", "winit"]  # All desktop backends + windowing
android = ["vulkan"]                    # Android only uses Vulkan (native windowing)
ios = ["metal"]                         # iOS only uses Metal (native windowing)
fuchsia = ["vulkan"]                    # Fuchsia uses Vulkan via Scenic (native windowing)
harmony = ["vulkan"]                    # HarmonyOS prefers Vulkan (native windowing)
web = ["webgpu", "webgl"]               # Browser: WebGPU primary, WebGL2 fallback
# Runtime BC1/BC3 texture encoding for 2D images and masks. ~50-150 ms
# encode per 2K × 2K RGBA at load, 4-8× GPU VRAM reduction for the
# image cache. Off by default so the `tbc` dep is opt-in; enable
# unconditionally from the app crate since tbc is pure Rust and
# compiles everywhere Blinc ships.
bc-encode = ["dep:tbc"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.1" }
blinc_paint = { path = "../blinc_paint", version = "0.5.1" }
blinc_text = { path = "../blinc_text", version = "0.5.1" }

# Optional BC encoder — only pulled in when `bc-encode` is enabled.
# Same pure-Rust crate blinc_gltf uses for mesh-texture compression.
tbc = { version = "0.3", optional = true }

# GPU
wgpu.workspace = true
naga.workspace = true
bytemuck.workspace = true

# Windowing (optional - only needed for desktop)
winit = { workspace = true, optional = true }
raw-window-handle.workspace = true

# Data structures
slotmap.workspace = true
smallvec.workspace = true
lru.workspace = true

# Logging
tracing.workspace = true

# Async
pollster.workspace = true

# Path tessellation
lyon.workspace = true

# Browser-only deps for the `with_canvas` constructor — kept under a
# wasm32 target gate so desktop / mobile builds don't pull `web-sys`
# into their dep trees. The `blinc_platform_web` extension brings these
# in as well; declaring them here is what lets `with_canvas` accept
# `web_sys::HtmlCanvasElement` directly without going through that crate.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
wasm-bindgen = "0.2"
