[package]
name = "blinc_layout"
description = "Blinc layout engine - Flexbox layout powered by Taffy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_layout"
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
# Enable recorder integration for debugging/testing. Disable for production builds.
recorder = []
# Enable audio/video player widgets
media = ["dep:blinc_media"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.4.0" }
blinc_animation = { path = "../blinc_animation", version = "0.4.0" }
blinc_theme = { path = "../blinc_theme", version = "0.4.0" }

# Layout
taffy.workspace = true

# Data structures
slotmap.workspace = true
indexmap.workspace = true

# Logging
tracing.workspace = true

# Regex for syntax highlighting
regex.workspace = true

# Media widgets (optional)
blinc_media = { path = "../blinc_media", version = "0.4.0", optional = true }

# Markdown parsing
pulldown-cmark = "0.10"

# HTML entity decoding
html-escape = "0.2"

# CSS parser combinators
nom = "7"

# `web_time::Instant` — drop-in replacement for `std::time::Instant`
# that works on `wasm32-unknown-unknown` via `performance.now()`. On
# native targets it's a `pub use std::time::Instant` re-export with
# zero overhead. Required because `std::time::Instant::now()` panics
# at runtime on wasm32 with "time not implemented on this platform".
web-time = "1.1"

# URL opening (for links) - desktop only
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
open = "5"

# Clipboard (cross-platform text + image) — desktop + iOS only.
# `arboard` does not compile on `wasm32-unknown-unknown` (no platform
# backend) or on Android (no X11/Wayland/UIKit clipboard layer either).
# The wasm runner provides its own stubs / async impl in
# `widgets/text_edit.rs` under `cfg(target_arch = "wasm32")`; the
# Android runner stubs the clipboard via the system clipboard service
# in `BlincNativeBridge.kt` and the matching Rust handler that the
# native bridge dispatches into.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
arboard = "3"
